# TesteLuzz

./: .env.example  .gitignore  .replit  IMPORTANTE_LEIA.txt  MANUAL_DE_USO_E_IMPLANTACAO.md  ai_providers.py  app.py  config.py  database.py  demo_image.py  document_processor-antigo.py  document_processor.py  leiame.txt  pyproject.toml  replit.md  report_generator.py  requirements.txt  test_final.py  test_simple.py  utils.py
attached_assets/: Pasted-Baseado-no-PRD-em-anexo-sendo-que-aumentamos-de-20-para-at-50-arquivos-simult-neos-desenvolva-u-1752181366256_1752181366257.txt
static/css/: custom.css  style-antigo.css
static/js/: app.js
templates/: admin.html  base.html  index.html
versions/replit/: README.md
versions/vercel/: README.md  vercel.json
versions/vercel/api/: index.py
versions/vps/: Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  install.sh  nginx.conf  requirements.txt
